Added year_over_year_movement function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,5 @@ export(fit_lm_tidy_w_stars)
 export(pull_formidable_entries)
 export(tabyl_ms_stacked_bar)
 export(tt2_get_query)
+export(year_over_year_movement)
 importFrom(magrittr,"%>%")
