--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(bar_chart_stack)
 export(fit_lm_tidy_w_stars)
 export(pull_formidable_entries)
+export(tabyl_3way_long)
 export(tabyl_ms_stacked_bar)
 export(tt2_get_query)
 export(year_over_year_movement)
