--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export("%>%")
 export(bar_chart_stack)
+export(fct_case_when)
 export(fit_lm_tidy_w_stars)
 export(fix_SM_dual_row_names)
 export(tabyl_2way_long)
