--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(read_excel_all_sheets)
 export(tabyl_2way_long)
 export(tabyl_3way_long)
 export(tabyl_ms_stacked_bar)
+export(to_clipboard)
 export(tt2_get_query)
 export(year_over_year_movement)
 importFrom(magrittr,"%>%")
