--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(fct_case_when)
 export(fit_lm_tidy_w_stars)
 export(fix_SM_dual_row_names)
 export(read_excel_all_sheets)
+export(show_in_excel)
 export(tabyl_2way_long)
 export(tabyl_3way_long)
 export(tabyl_ms_stacked_bar)
